# game-mappings-updater

./: .env.example  .gitignore  LICENSE  README.md  igdb.py  main.py  pyproject.toml  sqlite_export.py  steam.py  wikidata.py
.github/workflows/: make-release.yml
output/: fling_all_trainers.json  fling_game_names.json  fling_translations.db  game_mappings_manual.json
