[project]
name = "game-mappings-updater"
version = "0.1.0"
description = "从 flingtrainer.com 爬取所有修改器名称，用于维护 FLiNG Downloader 的游戏名映射表"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
]

[project.scripts]
game-mappings-updater = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
